# src/main/resources/static/api.yaml
@@ -13,7 +13,31 @@ tags:
       description: Find out more
       url: http://swagger.io
 paths:
-  /employee:
+  /employees:
+    get:
+      tags:
+        - employee
+      summary: Finds all employees
+      description: Find employees
+      operationId: findEmployees
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+      security:
+        - employeedatabase_auth:
+            - write:employees
+            - read:employees
     post:
       tags:
         - employee
@@ -47,16 +71,27 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception
+        '500':
+          description: Internal server error
       security:
         - employeedatabase_auth:
             - write:employees
             - read:employees
+  /employees/{employeeId}:
     put:
       tags:
         - employee
       summary: Update an existing employee
       description: Update an existing employee by Id
       operationId: updateEmployee
+      parameters:
+        - name: employeeId
+          in: path
+          description: ID of employee to return
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         description: Update an existent employee in the database
         content:
@@ -76,7 +111,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponse'          
+                $ref: '#/components/schemas/ApiResponse'
             application/xml:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
@@ -86,50 +121,12 @@ paths:
           description: Employee not found
         '422':
           description: Validation exception
+        '500':
+          description: Internal server error
       security:
         - employeedatabase_auth:
             - write:employees
             - read:employees
-  /employee/find-by-status:
-    get:
-      tags:
-        - employee
-      summary: Finds employees by status
-      description: Multiple status values can be provided with comma separated strings
-      operationId: findEmployeesByStatus
-      parameters:
-        - name: status
-          in: query
-          description: Status values that need to be considered for filter
-          required: false
-          explode: true
-          schema:
-            type: string
-            default: active
-            enum:
-              - active
-              - inactive
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Employee'          
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Employee'
-        '400':
-          description: Invalid status value
-      security:
-        - employeedatabase_auth:
-            - write:employees
-            - read:employees
-  /employee/{employeeId}:
     get:
       tags:
         - employee
@@ -158,6 +155,8 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Employee not found
+        '500':
+          description: Internal server error
       security:
         - api_key: []
         - employeedatabase_auth:
@@ -191,43 +190,49 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Employee not found
+        '500':
+          description: Internal server error
       security:
         - employeedatabase_auth:
             - write:employees
             - read:employees
-  /employee/{employeeId}/upload-image:
-    post:
+  /employees/find-by-status:
+    get:
       tags:
         - employee
-      summary: Uploads an image
-      description: ''
-      operationId: uploadFile
+      summary: Finds employees by status
+      description: Multiple status values can be provided with comma separated strings
+      operationId: findEmployeesByStatus
       parameters:
-        - name: employeeId
-          in: path
-          description: ID of employee to update
-          required: true
+        - name: status
+          in: query
+          description: Status values that need to be considered for filter
+          required: false
+          explode: true
           schema:
-            type: integer
-            format: int64
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                filename:
-                  type: array
-                  items:
-                    type: string
-                    format: binary
+            type: string
+            default: active
+            enum:
+              - active
+              - inactive
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponse'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+        '400':
+          description: Invalid status value
+        '500':
+          description: Internal server error
       security:
         - employeedatabase_auth:
             - write:employees
